--- a/package.json
+++ b/package.json
@@ -22,19 +22,11 @@
     }
   ],
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 0.11.0"
   },
   "scripts": {
     "create": "grunt 'phonegap_project:create'",
     "build": "grunt 'phonegap_project:build'"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0"
-  },
-  "peerDependencies": {
-    "grunt": "~0.4.5"
   },
   "keywords": [
     "gruntplugin",
@@ -54,7 +46,10 @@
     "accesses",
     "domains"
   ],
-  "dependencies": {
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.10.0",
     "lodash": "^2.4.1"
   }
 }
