--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-readme-generator": "^0.3.41",
+    "load-grunt-config": "^0.13.0",
     "lodash": "^2.4.1"
   }
 }
