--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.3",
   "homepage": "https://github.com/CoHyper/grunt-phonegap-project",
   "author": {
-    "name": "svenlang",
+    "name": "Sven Lang",
     "email": "svenlang07@gmail.com",
     "url": "http://myylinks.de"
   },
