--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ before_install:
 install:
   - "npm install"
 before_script:
-  - "npm install phonegap -g"
-  - "npm install cordova -g"
-  - "npm install plugman -g"
+  - "npm install -g phonegap"
+  - "npm install -g cordova"
+  - "npm install -g plugman"
 script:
   - "grunt 'phonegap_project:create'"
   - "grunt 'phonegap_project:build'"
