--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "grunt-phonegap-project",
-  "description": "Create a Cordova Application with config folder, bundleId, platforms, plugins, androidMinSdk, androidTargetSdk, app version and domains accesses.",
-  "version": "0.1.3",
+  "description": "Create a Phonegap Application with config folder, bundleId, platforms, plugins, androidMinSdk, androidTargetSdk, app version and domains accesses.",
+  "version": "0.1.4",
   "homepage": "https://github.com/CoHyper/grunt-phonegap-project",
   "author": {
     "name": "Sven Lang",
-    "email": "svenlang07@gmail.com",
-    "url": "http://myylinks.de"
+    "email": "svenlang07@gmail.com"
   },
   "repository": {
     "type": "git",
@@ -25,8 +24,7 @@
     "node": ">= 0.11.0"
   },
   "scripts": {
-    "create": "grunt 'phonegap_project:create'",
-    "build": "grunt 'phonegap_project:build'"
+    "create": "grunt phonegap_project"
   },
   "keywords": [
     "gruntplugin",
@@ -43,8 +41,8 @@
     "plugin",
     "platform",
     "version",
-    "accesses",
-    "domains"
+    "access",
+    "domain"
   ],
   "devDependencies": {
     "grunt": "^0.4.5",
