--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "access",
     "domain"
   ],
-  "devDependencies": {
+  "dependencie": {
     "grunt": "^0.4.5",
+    "lodash": "^2.4.1"
+  },
+  "devDependencies": {
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-readme-generator": "^0.3.41",
-    "load-grunt-config": "^0.13.0",
-    "lodash": "^2.4.1"
+    "load-grunt-config": "^0.13.0"
   }
 }
